addons/kube-prometheus-stack/gateway-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prom-route
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "gateway-admin-prom.sctp-sandbox.com"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: monitoring-listeners
      sectionName: prom-https
  hostnames:
    - gateway-admin-prom.sctp-sandbox.com
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "gateway-admin-grafana.sctp-sandbox.com"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: monitoring-listeners
      sectionName: grafana-https
  hostnames:
    - gateway-admin-grafana.sctp-sandbox.com
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
